tests/checking-op.m31.ref
Operation inhab is declared.

val h : ∀ α, α ⇒ α

Constant A is declared.

x_inhab₀ : A
⊢ x_inhab₀ : A

val h' : ∀ α, α ⇒ α

y_inhab₁ : A
⊢ y_inhab₁ : A

z_inhab₂ : A
⊢ z_inhab₂ : A

Successfully failed command with runtime error:
File "./checking-op.m31", line 21 character 5 - line 23 character 7:
No matching pattern found for value
   None


