tests/checking-op.m31

operation inhab : Judgement

let h = handler
  inhab : Some ?t => assume x_inhab : t in yield x_inhab
end

constant A : Type

do with h handle inhab : A

let h' = handler
  | inhab => assume y_inhab : A in yield y_inhab
  | inhab : Some ?t => assume x_inhab : t in yield x_inhab
end

do with h' handle inhab : A

handle
  inhab : ?t =>
    match t with
      Some ?t => assume z_inhab : t in z_inhab
    end
end

do inhab : A

fail inhab

